wishlist popup, header overflow fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/helpers/_mixins.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/helpers/_mixins.scss
@@ -292,7 +292,7 @@
     }
 
     @media all and (max-width: $xs-breakpoint) {
-        flex: 0 1 70px;
+        flex: 0 0 70px;
     }
 }
 
