--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
@@ -70,7 +70,7 @@
             width: 100%;
             border-bottom: 1px solid $grey;
             display: none;
-            z-index: 1;
+            z-index: 2;
 
             > section {
                 max-width: 1000px;
