--- a/app/design/frontend/peterjacksons/petertheme/web/css/modules/wishlist/_wishlist.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/modules/wishlist/_wishlist.scss
@@ -125,6 +125,7 @@ body[class~='guest-wishlist-index-index'] {
         text-align: center;
         color: black;
         margin: 25px 0 0 0;
+        cursor: pointer;
     }
 
     .price-box {
